# InstaHazardMaps

./: AGENTS.md  README.md  codex.md  pyproject.toml  requirements.txt
hazardwatch/: cli.py  mission_scaffold.py  pipeline.py  stac_search.py
tests/: test_cli.py  test_mission_scaffold.py  test_pipeline.py  test_stac_search.py
web/: index.html
